# secrec

./: .gitignore  .gitmodules  .mailmap  CMakeLists.txt  README  archive-all.sh  config.local.example  config.pri  config.pri.example  runsca.sh  scc.pri  scc.pro  wishlist.md
CMakeIncludes/: FindMPFR.cmake
doc/secrec/: .gitignore  Makefile  references.bib  semantics.tex
doc/stdlib/: Doxyfile  README  build_html.sh
examples/: flow01.sc  flow02.sc
include/libscc/: APFloat.h  APInt.h  AbstractOperatorTypeUnifier.h  Blocks.h  CFG.h  CastTypeUnifier.h  CodeGen.h  CodeGenResult.h  CodeGenState.h  Constant.h  Context.h  DataType.h  DataTypeStruct.h  DataflowAnalysis.h  ICodeList.h  Imop.h  Intermediate.h  Location.h  Log.h  Misc.h  ModuleMap.h  OperatorTable.h  OperatorTemplateChecker.h  OperatorTypeUnifier.h  Optimizer.h  Parser.h  ParserEnums.h  PrettyPrint.h  SecurityType.h  StringRef.h  StringTable.h  Symbol.h  SymbolFwd.h  SymbolTable.h  Syscall.h  TemplateChecker.h  TreeNode.h  TreeNodeC.h  TreeNodeFwd.h  TypeArgument.h  (+34 more)
include/libscc/analysis/: AbstractReachable.h  ConstantFolding.h  Dominators.h  LiveMemory.h  LiveVariables.h  ReachableDefinitions.h  ReachableReleases.h  ReachableReturns.h  ReachableUses.h  ReachingDeclassify.h  ReachingDefinitions.h  ReachingJumps.h
include/libscc/secrec/: parser.h  symboltable.h  tnsymbols.h  treenode.h  treenodebool.h  treenodecodeable.h  treenodedecl.h  treenodeexpr.h  treenodeexprassign.h  treenodeexprbinary.h  treenodeexpridentifier.h  treenodeexprrvariable.h  treenodeexprternary.h  treenodeexprunary.h  treenodefundef.h  treenodefundefs.h  treenodeglobals.h  treenodeidentifier.h  treenodeint.h  treenodelvariable.h  treenodeprogram.h  treenodestring.h  treenodetype.h  treenodetypearray.h  treenodetypebasic.h  treenodetypevoid.h  treenodeuint.h  types.h
lib/: .gitignore
src/: CMakeLists.txt  src.pro
src/katepart/: sc.xml
src/libscc/: .gitignore  APFloat.cpp  APFloat.h  APInt.cpp  APInt.h  AbstractOperatorTypeUnifier.cpp  AbstractOperatorTypeUnifier.h  Blocks.cpp  Blocks.h  CMakeLists.txt  CastTemplateChecker.cpp  CastTemplateChecker.h  CastTypeUnifier.cpp  CastTypeUnifier.h  CodeGen.cpp  CodeGen.h  CodeGenResult.cpp  CodeGenResult.h  CodeGenState.h  Constant.cpp  Constant.h  Context.cpp  Context.h  ContextImpl.cpp  ContextImpl.h  DataType.cpp  DataType.h  DataflowAnalysis.cpp  DataflowAnalysis.h  ICodeList.cpp  ICodeList.h  Imop.cpp  Imop.h  Intermediate.cpp  Intermediate.h  Location.cpp  Location.h  Log.cpp  Log.h  Misc.cpp  (+76 more)
src/libscc/analysis/: AbstractReachable.h  BoostInsertWorkaround.h  ConstantFolding.cpp  ConstantFolding.h  CopyPropagation.cpp  CopyPropagation.h  Dominators.cpp  Dominators.h  LiveMemory.cpp  LiveVariables.cpp  ReachableDefinitions.cpp  ReachableDefinitions.h  ReachableReleases.cpp  ReachableReturns.cpp  ReachableUses.cpp  ReachingDeclassify.cpp  ReachingDeclassify.h  ReachingDefinitions.cpp  ReachingDefinitions.h  ReachingJumps.cpp  ReachingJumps.h
src/libscc/codegen/: Assign.cpp  Expression.cpp  LValue.cpp  Program.cpp  Statement.cpp  assign.cpp  expression.cpp  program.cpp  statement.cpp  util.cpp
src/libscc/optimizer/: ConstantFolding.cpp  CopyElimination.cpp  DeadAllocElimination.cpp  DeadStoreElimination.cpp  DeadVariableElimination.cpp  Inline.cpp  RemoveEmptyBlocks.cpp  RemoveEmptyProcedures.cpp  RemoveUnreachableBlocks.cpp
src/libscc/secrec/: symboltable.cpp  tnsymbols.cpp  treenode.cpp  treenodebool.cpp  treenodedecl.cpp  treenodeexpr.cpp  treenodeexprassign.cpp  treenodeexprbinary.cpp  treenodeexprrvariable.cpp  treenodeexprternary.cpp  treenodeexprunary.cpp  treenodefundef.cpp  treenodefundefs.cpp  treenodeglobals.cpp  treenodeidentifier.cpp  treenodeint.cpp  treenodelvariable.cpp  treenodeprogram.cpp  treenodeprogram.h  treenodestring.cpp  treenodetypearray.cpp  treenodetypebasic.cpp  treenodeuint.cpp  types.cpp
src/libscc/typechecker/: Expression.cpp  LValue.cpp  Statement.cpp  Struct.cpp  Templates.cpp  Templates.h  Type.cpp  procedures.cpp  templates.cpp  templates.h
src/sca/: CMakeLists.txt  main.c  main.cpp  sca.pro
src/scc/: Builtin.cpp  Builtin.h  CMakeLists.txt  Compiler.cpp  Compiler.h  CopyElimination.cpp  CopyElimination.h  DeadVariableElimination.cpp  DeadVariableElimination.h  OStreamable.h  RegisterAllocator.cpp  RegisterAllocator.h  RemoveUnreachableBlocks.cpp  RemoveUnreachableBlocks.h  ScalarAllocPlacement.cpp  ScalarAllocPlacement.h  StringLiterals.cpp  StringLiterals.h  SyscallManager.cpp  SyscallManager.h  TargetInfo.cpp  TargetInfo.h  VMCode.cpp  VMCode.h  VMDataType.h  VMFpu.cpp  VMFpu.h  VMInstruction.cpp  VMInstruction.h  VMSymbolTable.cpp  VMSymbolTable.h  VMValue.cpp  VMValue.h  args.cpp  args.h  main.cpp
src/stdlib/: a3p_bloom.sc  a3p_matrix.sc  a3p_oblivious.sc  a3p_random.sc  a3p_sort.sc  additive3pp.sc  matrix.sc  oblivious.sc  profiling.sc  stdlib.sc  x3p_aes.sc  x3p_join.sc  x3p_string.sc  xor3pp.sc
src/stdlib/doc/: arrays.sc  code_stucture.sc  control_structures.sc  data_types.sc  expressions.sc  functions.sc  main.sc  modules.sc  operators.sc  templates.sc  types.sc  variables.sc
src/sublime-syntax/: secrec.tmLanguage
tests/: CMakeLists.txt  tests.pro
tests/libscc/: CMakeLists.txt  libscc.pro
tests/libscc/testparse/: CMakeLists.txt  testparse.cpp  testparse.h  testparse.pro
tests/libscc/testtreenode/: .gitignore  CMakeLists.txt  testtreenode.cpp  testtreenode.h  testtreenode.pro
tests/regression/: CMakeLists.txt
tests/sharemind/: README.txt  common.sc
tests/stdlib/: .gitignore  CMakeLists.txt  a3p_bloom_test.sc  a3p_comparisons_test_scalars.sc  a3p_comparisons_test_vectors.sc  a3p_matrix_test.sc  a3p_sort_test.sc  additive3pp_test.sc  arithmetic_test_scalar.sc  arithmetic_test_vector.sc  classification_test_scalars.sc  classification_test_vectors.sc  comparisons_test_scalars.sc  comparisons_test_vectors.sc  matrix_test.sc  miscellaneous_test.sc  oblivious_test.sc  runtests_template  shuffling_test.sc  stat_summary_test.sc  stdlib_test.sc  test_utility.sc  x3p_aes_test.sc  x3p_string_test.sc  xor3pp_test.sc
(+272 files in other folders)
